# mandelbrot-gl

./: .gitmodules  CMakeLists.txt  ColorSchemes.glsl  DoubleFloat.hpp  FloatFloat.glsl  FloatFloat.hpp  Pixel.glsl  PixelD.glsl  PixelF.glsl  PixelFF.glsl  README.md  Shader.cpp  Shader.hpp  Vertex.glsl  VertexD.glsl  mandelbrot-gl.cpp  pendulums.cpp
include/: CoreGL.hpp  CoreMacros.hpp  stb_image_write.h
python/: pendulum.py
